@@ -1,3 +1,9 @@
+2005-08-05  Jim Huang  <jserv@kaffe.org>
+
+	* src/script/script.cpp (FinalizeScriptInterface):
+	Fixlet to module query.
+	Clarify headers including.
+
 2005-08-05  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>
 
 	* src/core/termview.cpp,
